--- a/index.html
+++ b/index.html
@@ -15,42 +15,77 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body> 
-    <div class="box container">
+
+<main class="main-content">
+    <div class="global-wrapper">
+
+        <!-- HERO -->
+        <div class="hero">
+            <div class="hero-content">
+                <h1 class="hero-heading">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h1>
+                <a class="hero-link" href="#">
+                    <span class="hero-link-inner">
+                        <!-- yulduzcha rasmi -->
+                        <span class="hero-link-text">Top bloglar</span>
+                    </span>
+                </a>
+            </div>
+        </div>
+
+
+    </div>
+</main>
+
+
+
+
+
+    <!-- <div class="box container">
         <div class="main">
-            <h1>Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h1>
-            <span><img src="./img/icon-vector.png" alt="Yulduz"></span>
-            <span>Top bloglar</span>
+            <h1 class="main-text">Sayohat haqidagi eng qiziq bloglarni kuzatib boring.</h1>
+            <button class="button" type="submit">
+                <img src="./img/icon-vector.png" alt="Yulduz">
+                <span class="main-span-text">Top bloglar</span>
+            </button>
         </div>
         <div class="hero">
             <h1>Eng so’nggi videolar</h1>
-            <hr>
+            <hr class="line">
             <div>
-                <div>
-                    <img src="./img/article-poster.png" alt="Uy" width="300px" height="300px">
-                    <h3>O’rmonda uchburchaksimon uy qurdik</h3>
-                    <span><img src="./img/icon-clock.png" alt="Soat"></span>
-                    <span>1 hafta oldin</span>
-                    <span><img src="./img/icon-visibility.png" alt="Ko'z"></span>
-                    <span>873 ming</span>
+                <div class="hero-poster">
+                    <img class="hero-img" src="./img/article-poster.png" alt="Uy" width="300px" height="300px">
+                    <div class="hero-poster-heading">
+                        <h3>O’rmonda uchburchaksimon uy qurdik</h3>
+                        <span class="span-img"><img src="./img/icon-clock.png" alt="Soat"></span>
+                        <span class="span-text">1 hafta oldin</span>
+                        <span><img src="./img/icon-visibility.png" alt="Ko'z"></span>
+                        <span>873 ming</span>
+                    </div>
                 </div>
-                <div>
-                    <img src="./img/article-poster-second.png" alt="Sibir">
-                    <h3>Sibirliklarning qoldirib ketilgan uychalari</h3>
-                    <span><img src="./img/icon-clock.png" alt="Soat"></span>
-                    <span>3 hafta oldin</span>
-                    <span><img src="./img/icon-visibility.png" alt="Ko'z"></span>
-                    <span>819 ming</span>
+
+                <div class="hero-poster">
+                    <img class="hero-img" src="./img/article-poster-second.png" alt="Sibir">
+                    <div>
+                        <h3>Sibirliklarning qoldirib ketilgan uychalari</h3>
+                        <span class="span-img"><img src="./img/icon-clock.png" alt="Soat"></span>
+                        <span class="span-text">3 hafta oldin</span>
+                        <span><img src="./img/icon-visibility.png" alt="Ko'z"></span>
+                        <span>819 ming</span>
+                    </div>
                 </div>
-                <div>
-                    <img src="./img/article-poster-third.png" alt="Sayohat">
-                    <h3>Yer-uyida mallarang kuchugim bilan tunab qoldik</h3>
-                    <span><img src="./img/icon-clock.png" alt="Soat"></span>
-                    <span>1 oy oldin</span>
-                    <span><img src="./img/icon-visibility.png" alt="Ko'z"></span>
-                    <span>3.9 million</span>
+
+                <div class="hero-poster">
+                    <img class="hero-img" src="./img/article-poster-third.png" alt="Sayohat">
+                    <div>
+                        <h3>Yer-uyida mallarang kuchugim bilan tunab qoldik</h3>
+                        <span class="span-img"><img src="./img/icon-clock.png" alt="Soat"></span>
+                        <span class="span-text">1 oy oldin</span>
+                        <span><img src="./img/icon-visibility.png" alt="Ko'z"></span>
+                        <span>3.9 million</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     </body>
 </html>
