Add blog content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
 
     <title>Articles loyihasi</title>
     
@@ -32,6 +32,72 @@
             </div>
         </div>
 
+        <!-- BLOG -->
+        <div class="blog">
+            <h1 class="blog-heading">Eng so’nggi videolar</h1>
+            <hr class="blog-line">
+
+            <div class="blog-content">
+                <img class="blog-content-img" src="./img/article-poster.png" alt="Uycha">
+                <div class="blog-content-text">
+                    <a class="blog-content-link" href="#">
+                        <h2 class="blog-heading-text">O’rmonda uchburchaksimon uy qurdik</h2>
+                    </a>
+                    <div class="views">
+                        <div class="view-clock">
+                            <img src="./img/icon-clock.png" alt="icon">
+                            <span class="blog-views">1 hafta oldin</span>
+                        </div>
+                        <div class="visibility">
+                            <img src="./img/icon-visibility.png" alt="icon">
+                            <span class="blog-views">873 ming</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-content">
+                <img class="blog-content-img" src="./img/article-poster.png" alt="Uycha">
+                <div class="blog-content-text">
+                    <a class="blog-content-link" href="#">
+                        <h2 class="blog-heading-text">Sibirliklarning qoldirib ketilgan uychalari</h2>
+                    </a>
+                    <div class="views">
+                        <div class="view-clock">
+                            <img src="./img/icon-clock.png" alt="icon">
+                            <span class="blog-views">3 hafta oldin</span>
+                        </div>
+                        <div class="visibility">
+                            <img src="./img/icon-visibility.png" alt="icon">
+                            <span class="blog-views">819 ming</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-content">
+                <img class="blog-content-img" src="./img/article-poster.png" alt="Uycha">
+                <div class="blog-content-text">
+                    <a class="blog-content-link" href="#">
+                        <h2 class="blog-heading-text">Yer-uyida mallarang kuchugim bilan tunab qoldik</h2>
+                    </a>
+                    <div class="views">
+                        <div class="view-clock">
+                            <img src="./img/icon-clock.png" alt="icon">
+                            <span class="blog-views">1 oy oldin</span>
+                        </div>
+                        <div class="visibility">
+                            <img src="./img/icon-visibility.png" alt="icon">
+                            <span class="blog-views">3.9 million</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <a class="blog-link" href="#"><span class="hero-link-text">Yana yuklash</span></a> 
+                    
+
+        </div>
 
     </div>
 </main>
